@@ -3,7 +3,7 @@
  * Copyright (c) 1989-1992, Brian Berliner
  * 
  * You may distribute under the terms of the GNU General Public License as
- * specified in the README file that comes with the CVS 1.4 kit.
+ * specified in the README file that comes with the CVS source distribution.
  * 
  * This file holds (most of) the configuration tweaks that can be made to
  * customize CVS for your site.  CVS comes configured for a typical SunOS 4.x
