@@ -1,5 +1,13 @@
 Fri Sep 12 11:12:34 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
+	* add.c, admin.c, checkin.c, checkout.c, classify.c, commit.c,
+	create_adm.c, cvsrc.c, diff.c, entries.c, find_names.c, hash.c,
+	import.c, lock.c, log.c, logmsg.c, main.c, modules.c, myndbm.c,
+	no_diff.c, parseinfo.c, patch.c, rcs.c, rcscmds.c, recurse.c,
+	remove.c, repos.c, root.c, rtag.c, status.c, subr.c, tag.c,
+	update.c, vers_ts.c, hash.h, rcs.h, options.h.in: Change "CVS 1.4
+	kit" to "CVS source distribution".
+
 	* sanity.sh: Comment out call to "whoami".
 
 Thu Sep 11 10:09:04 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
